<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity"
    android:background ="#FFFBFB">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/setting_profile_image"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_marginStart="140dp"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="150dp"
                android:background="#F4F1F1"
                android:padding="20dp"
                android:src="@drawable/man" />

            <EditText

                android:id="@+id/et_ent_shp_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/Shop_name"
                android:padding="20dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textStyle="bold" />

            <EditText

                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:hint="@string/Email"
                android:padding="20dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textStyle="bold"

                />

            <EditText

                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/Password"
                android:padding="20dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_phone_shop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/Phone"
                android:padding="20dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textStyle="bold" />

            <EditText

                android:id="@+id/et_address_shop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/Address"
                android:padding="20dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_shop_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:padding="15dp"
                android:background="@drawable/round"
                android:text="@string/Register"
                android:textSize="20dp"
                android:clickable="true"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="@color/black"

                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Log_in"
                android:textSize="20dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:clickable="true"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:id="@+id/log_in"/>


        </LinearLayout>
    </ScrollView>

</RelativeLayout>